nginx/deployment-ubuntu.yml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: ubuntu
  labels:
    app: ubuntu

spec:
  replicas: 2
  selector:
    matchLabels:
      app: ubuntu
      tier: frontend

  strategy:
    type: Recreate

  template:
    metadata:
      labels:
        app: ubuntu
        tier: frontend
    spec:
      containers:
      - image: ubuntu:latest
        name: ubuntu
        ports:
        - containerPort: 80
          name: ubuntu
