nginx/service-ubuntu.yml
apiVersion: v1
kind: Service
metadata:
  name: ubuntu
  labels:
    app: ubuntu
spec:
  ports:
    - port: 80
  selector:
    app: ubuntu
    tier: frontend
  type: NodePort
